--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.6.4"
   },
   "dependencies": {
-    "core-js": "^3.32.1"
+    "core-js": "^3.32.1",
+    "eslint-plugin-import": "^2.28.1"
   }
 }
