--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@babel/core": "^7.22.11",
     "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.4",
+    "eslint-plugin-import": "^2.28.1",
     "jest": "^29.6.4"
   },
   "dependencies": {
-    "core-js": "^3.32.1",
-    "eslint-plugin-import": "^2.28.1"
+    "core-js": "^3.32.1"
   }
 }
