--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,18 @@
-{
+{   
     "env": {
-	
-	"jest": true
-}
+        "es6": true,
+        "browser": true,
+	    "jest": true
+    },
+    "rules": {
+        "linebreak-style": 0,
+        "no-restricted-syntax": [
+            "error",
+            "LabeledStatement",
+            "WithStatement"
+        ]
+    },
+    "parserOptions": {
+        "sourceType": "module"
+    }    
 }
